<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"></item>

    <item
        android:id="@+id/action_location"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/location"
        app:showAsAction="always"></item>


    <item
        android:id="@+id/action_setting"
        android:title="@string/setting"
        app:showAsAction="never"></item>
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never"></item>
</menu>